--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1049,7 +1049,7 @@ table tbody tr .actions .action:hover .tooltipParent{
     color: white;
     text-align: center;
     padding: 15px 0;
-    position: relative;
+    position: absolute;
     bottom: 0;
     width: 100%;
     font-size: 14px;
